# TARS

./: .gitignore  .gitmodules  =6.0  Makefile  README.md  pyproject.toml
logs/: 00_generate_51682067_0.err  00_generate_51682067_0.out  00_generate_51682067_1.err  00_generate_51682067_1.out  00_generate_51682067_10.err  00_generate_51682067_10.out  00_generate_51682067_11.err  00_generate_51682067_11.out  00_generate_51682067_2.err  00_generate_51682067_2.out  00_generate_51682067_3.err  00_generate_51682067_3.out  00_generate_51682067_4.err  00_generate_51682067_4.out  00_generate_51682067_5.err  00_generate_51682067_5.out  00_generate_51682067_6.err  00_generate_51682067_6.out  00_generate_51682067_7.err  00_generate_51682067_7.out  00_generate_51682067_8.err  00_generate_51682067_8.out  00_generate_51682067_9.err  00_generate_51682067_9.out  00_generate_51684249_0.err  00_generate_51684249_0.out  00_generate_51684249_1.err  00_generate_51684249_1.out  00_generate_51684249_10.err  00_generate_51684249_10.out  00_generate_51684249_11.err  00_generate_51684249_11.out  00_generate_51684249_2.err  00_generate_51684249_2.out  00_generate_51684249_3.err  00_generate_51684249_3.out  00_generate_51684249_4.err  00_generate_51684249_4.out  00_generate_51684249_5.err  00_generate_51684249_5.out  (+5171 more)
manifests/: eval_heldout.tsv  eval_train.tsv  generate_pilot.tsv  generate_smoke.tsv  ram_handoff.md  rhythm_handoff.md  solve_manifest.tsv  validate_manifest.tsv
runs/: latest_checkpoint.txt
scripts/: bootstrap_sol.sh  build_generators.sh  build_val.sh  eval_phase1.sh  sol_init.sh  (+6 more)
(+106 files in other folders)
